--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,14 +13,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="/blog/add-new">Add Blog</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item">
+              <a class="nav-link" href="/user/logout">Logout</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <%= locals.user.fullName  %>
+                 
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
                 </ul>
-              </li>
+            </li> -->
           <% } else { %>
             <li class="nav-item">
                 <a class="nav-link" href="/user/signup">Create account</a>
