--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <%- include("./partials/head") %>
-    <title>Signup Page</title>
+    <title>BlogBuzz - Signup</title>
+    <link rel="icon" type="png" href="https://media.istockphoto.com/id/1200899039/photo/one-like-social-media-notification-with-thumb-up-icon.webp?a=1&b=1&s=612x612&w=0&k=20&c=oAfH1-YEsng29b5S9OTs_WF4VRumWISXZDSS0uzhzio=">
 </head>
 <body>
     <%- include("./partials/nav") %>
