--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <%- include("./partials/head") %>
-    <title>Blog</title>
+    <title>BlogBuzz - Read this wonderful blog</title>
+    <link rel="icon" type="png" href="https://media.istockphoto.com/id/1200899039/photo/one-like-social-media-notification-with-thumb-up-icon.webp?a=1&b=1&s=612x612&w=0&k=20&c=oAfH1-YEsng29b5S9OTs_WF4VRumWISXZDSS0uzhzio=">
 </head>
 <body>
     <%- include("./partials/nav") %>
@@ -30,9 +31,9 @@
         <% } %>
     </div>
 
-    <div class="mt-3">
+    <div class="mt-5" style="margin:80px ;">
         <% comments.forEach(comment => { %>
-            <div class="mt-3">
+            <div class="mt-3" style="margin-bottom:30px ;">
                 <img src="<%= blog.createdBy.profileImageURL %>" width="30px"/>
                 <%= comment.createdBy.fullName %> : <%= comment.content %><br>
             </div>
