--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <%- include("./partials/head") %>
-    <title>Home Page</title>
+    <title>BlogBuzz - List your blogs here</title>
+    <link rel="icon" type="png" href="https://media.istockphoto.com/id/1200899039/photo/one-like-social-media-notification-with-thumb-up-icon.webp?a=1&b=1&s=612x612&w=0&k=20&c=oAfH1-YEsng29b5S9OTs_WF4VRumWISXZDSS0uzhzio=">
 </head>
 <body>
     <%- include("./partials/nav") %>
 
-    <h1 class="text-center mt-4">Your Blogs</h1>
+    <h1 class="text-center mt-4">All Blogs</h1>
 
     <div class="container mt-4">
         <div class="row row-cols-3">
             <% blogs.forEach(blog => { %>
-                <div class="col">
-                    <div class="card col" style="width: 18rem;">
+                <div class="col mb-3">
+                    <div class="card col" style="width: 21rem;">
                         <img src="<%= blog.coverImageURL %>" class="card-img-top" style="height: 300px;" alt="...">
                         <div class="card-body">
                           <h5 class="card-title"><%= blog.title %></h5>
