--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -11,7 +11,7 @@
     <div class="container mt-4">
         <h1 class="mt-4 text-center"><%= blog.title %></h1>
         <img class="mt-4" style="margin-left: 430px;" src="<%= blog.coverImageURL %>" width="250px"/>
-        <pre class="mt-4"><%= blog.body %></pre>
+        <p class="mt-4" style="overflow: hidden;"><%= blog.body %></p>
     </div>
 
     <div class="container mt-4">
