--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,20 +11,21 @@
     <h1 class="text-center mt-4">All Blogs</h1>
 
     <div class="container mt-4">
-        <div class="row row-cols-3">
+        <div class="row">
             <% blogs.forEach(blog => { %>
-                <div class="col mb-3">
-                    <div class="card col" style="width: 21rem;">
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-4 d-flex justify-content-center" style="height: 400px;">
+                    <div class="card" style="width: 21rem;">
                         <img src="<%= blog.coverImageURL %>" class="card-img-top" style="height: 300px;" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title"><%= blog.title %></h5>
-                          <a href="/blog/<%= blog._id %>" class="btn btn-primary" style="margin-left: 90px;">View</a>
+                        <div class="card-body text-center">
+                            <h5 class="card-title"><%= blog.title %></h5>
+                            <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
                         </div>
                     </div>
                 </div>
             <% }) %>
         </div>
     </div>
+    
     
     <%- include("./partials/scripts") %>
 </body>
